issue with ctakes efault piper; switch GC